# magikoopa

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Project.toml  README.md  output.csv  pyproject.toml
data/corpora/: 0.txt  1.txt
data/models/: 1.json
data/tweets/: 0.json  1.json
src/: Magikoopa.jl  divide.jl  ffmanager.jl  gather.jl  generate.jl  main.jl  post.jl
